test/corpus/non_main_function.txt
=======
non-main from the README
=======

blinda la supercazzola Necchi antanizzata con alfio Mascetti o scherziamo?
    vaffanzum alfio meno 2!

----
(source_file
    (any_function
      (non_main_function
        (variable_type)
        (variable_name)
        (function_arguments_def
          (variable_name)
          (variable_type))
        (return
          (expression
            (expression
              (variable_name))
            (operator)
            (expression
              (number)))))))
===
void argument int function
===
blinda la supercazzola Necchi antanizzata o scherziamo?
    vaffanzum 4!
---
(source_file
  (any_function
    (non_main_function
      (variable_type)
      function_name: (variable_name)
      (return
        (expression
          const_number: (number))))))
===
void argument void function
===
blinda la supercazzola antanizzata o scherziamo?
    vaffanzum!
---
(source_file
  (any_function
    (non_main_function
      function_name: (variable_name)
      (return))))
===
Invoke the function
===
blinda la supercazzola Necchi antanizzata con alfio Mascetti, barilotto Necchi o scherziamo?
    vaffanzum alfio meno 2!

Lei ha clacsonato
antani come se fosse brematurata la supercazzola alfio con barilotto diviso 3 o scherziamo? per 2
vaffanzum!
---
(source_file
  (any_function
    (non_main_function
      (variable_type)
      (variable_name)
      (function_arguments_def
        (variable_name)
        (variable_type)
        (variable_name)
        (variable_type))
      (return
        (expression
          (expression
            (variable_name))
          (operator)
          (expression
            (number))))))
  (any_function
    (main_function
      (statement
        (assignment
          (variable_name)
          (assign_value
            (expression
              (expression
                (invocation
                  (variable_name)
                  (function_arguments_call
                    (expression
                      (expression
                        (variable_name))
                      (operator)
                      (expression
                        (number))))))
              (operator)
              (expression
                (number))))))
      (return))))